--- a/plant_care_app/pubspec.yaml
+++ b/plant_care_app/pubspec.yaml
@@ -7,11 +7,15 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  convert: ^3.1.2
   fl_chart: ^1.0.0
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
+  io: ^1.0.5
+  path_provider: ^2.1.5
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
