--- a/plant_care_app/pubspec.yaml
+++ b/plant_care_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
+  intl: ^0.20.2
   io: ^1.0.5
   path_provider: ^2.1.5
   sqflite: ^2.4.2
