--- a/plant_care_app/pubspec.yaml
+++ b/plant_care_app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   io: ^1.0.5
   path_provider: ^2.1.5
   sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.6
 
 dev_dependencies:
   flutter_test:
