--- a/plant_care_app/pubspec.yaml
+++ b/plant_care_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.20.2
   io: ^1.0.5
   path_provider: ^2.1.5
+  pie_chart: ^5.4.0
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.6
 
